--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
     </nav>
     <!-- Navbar End -->
 
-
     <!-- Header Start -->
     <div class="container-fluid bg-light my-6 mt-0" id="home">
         <div class="container">
@@ -90,7 +89,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <img class="img-fluid" style="min-height: 863px; min-width: 800px" src="img/profile-3.png" alt="">
+                    <img class="img-fluid" src="img/profile-3.png" alt="">
                 </div>
             </div>
         </div>
@@ -668,7 +667,7 @@
                         &copy; <a class="border-bottom text-secondary" href="#">Eliavina's Portfolio</a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
-                        Designed By <a class="border-bottom text-secondary" href="https://htmlcodex.com">HTML Codex</a>
+<!--                        Designed By <a class="border-bottom text-secondary" href="https://htmlcodex.com">HTML Codex</a>-->
                     </div>
                 </div>
             </div>
