--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                         <div class="col-md-6">
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
-                                    <h6 class="font-weight-bold">100</h6>
+                                    <h6 class="font-weight-bold">HTML</h6>
                                     <h6 class="font-weight-bold">100%</h6>
                                 </div>
                                 <div class="progress">
