--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta charset="utf-8">
     <title>Eliavina's Portfolio</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta name="description" content="Eliavina's Portfolio - A showcase of my work as a Fullstack Web Developer">
+    <meta name="keywords" content="Eliavina, Portfolio, Fullstack, Web Developer, Projects, vina, Gusvinanda Ellya Ruswati">
+    <meta name="author" content="Gusvinanda Ellya Ruswati">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://gusvinandaellya.github.io/">
+    <meta property="og:title" content="Eliavina's Portfolio">
+    <meta property="og:description" content="Eliavina's Portfolio - A showcase of my work as a Fullstack Web Developer">
+    <meta property="og:image" content="https://gusvinandaellya.github.io/img/profile-3.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://gusvinandaellya.github.io/">
+    <meta property="twitter:title" content="Eliavina's Portfolio">
+    <meta property="twitter:description" content="Eliavina's Portfolio - A showcase of my work as a Fullstack Web Developer">
+    <meta property="twitter:image" content="https://gusvinandaellya.github.io/img/profile-3.png">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
