--- a/index.html
+++ b/index.html
@@ -646,9 +646,9 @@
                     <p class="mb-2">My office:</p>
                     <h3 class="fw-bold">Ketileng Indah Raya II Street, Semarang City</h3>
                     <hr class="w-100">
-                    <p class="mb-2">Call me:</p>
-                    <h3 class="fw-bold">+62 858 4282 5562</h3>
-                    <hr class="w-100">
+<!--                    <p class="mb-2">Call me:</p>-->
+<!--                    <h3 class="fw-bold">+62 858 4282 5562</h3>-->
+<!--                    <hr class="w-100">-->
                     <p class="mb-2">Mail me:</p>
                     <h3 class="fw-bold">gusvinandaellyaruswati@gmail.com</h3>
                     <hr class="w-100">
